--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>hello world</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    hello world!
-
-  
-  </body>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>冬</title>
+	<script type="text/javascript" src="./jquery-1.11.3.js"></script>
+	<script type="text/javascript" src="./flexibles.js"></script>
+	
+	<style type="text/css">
+	</style>
+</head>
+<body>
+hello winter
+</body>
 </html>
