--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>冬</title>
-	<script type="text/javascript" src="./jquery-1.11.3.js"></script>
+	<meta charset="utf-8">
+	<meta name="renderer" content="webkit">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<title>终于有免费测试平台了~~</title>
 	<script type="text/javascript" src="./flexibles.js"></script>
 	
 	<style type="text/css">
+	*{margin: 0;padding: 0;}
+	.t1 {
+		width: 6.4rem;
+		height: 0.5rem;
+		line-height: 0.5rem;
+		background: #e6f1f6;
+		font-size: 0.24rem;
+	}
 	</style>
 </head>
 <body>
-hello winter
+<div class="t1">07-07&emsp;总结：还未开放上传&emsp;评分：未评&emsp;评价：未评</div>
+<div id="ans"></div>
+<script>
+var obj = document.documentElement.getBoundingClientRect();
+document.getElementById('ans').innerHTML = obj.width+"="+obj.height;
+</script>
 </body>
 </html>
