--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="ans"></div>
 <script>
 var obj = document.documentElement.getBoundingClientRect();
-document.getElementById('ans').innerHTML = obj.width+"="+obj.height;
+document.getElementById('ans').innerHTML = obj.width+"="+obj.height+"="+window.devicePixelRatio;
 </script>
 </body>
 </html>
