--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="renderer" content="webkit">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<title>终于有免费测试平台了~~</title>
+	<title>终于有免费测试平台了aaa~~</title>
 	<script type="text/javascript" src="./flexibles.js"></script>
 	
 	<style type="text/css">
